feat: Create story integrated
